--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.8.10",
     "@react-three/flex": "^1.0.0",
     "@studio-freight/lenis": "^0.2.21",
+    "curtainsjs": "^8.1.4",
     "gatsby": "^4.24.4",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-image": "^2.24.0",
@@ -31,6 +32,7 @@
     "gatsby-transformer-sharp": "^4.24.0",
     "gsap": "^3.11.3",
     "react": "^18.1.0",
+    "react-curtains": "^1.0.10",
     "react-dom": "^18.1.0",
     "sass": "^1.55.0",
     "three": "^0.145.0",
