--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.1.0",
     "react-curtains": "^1.0.10",
     "react-dom": "^18.1.0",
+    "sal.js": "^0.8.5",
     "sass": "^1.55.0",
     "three": "^0.145.0",
     "ukiyojs": "^3.0.3"
